doc/implementatiemodel/vkbo/onderneming/v0.0.7/resources/CHANGELOG.md
# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

## [0.0.7] - 2026-05-21

### Fixed
- Doorhaling URI is nu correct.

## [0.0.6] - 2026-05-21

### Added
- KBO codelijsten volgens het VKBO implementatiemodel.
- Bundler die alle assets bundelt per release.
- Publiceer vocabularium.

### Fixed
- Sync overview figure.

## [0.0.5] - 2026-05-20

### Added
- Ondersteuning voor ambtsbehalve doorhaling van KBO.

### Fixed
- Geografische positie van een Adres is nu correct en overeenkomstig met OSLO-Adres.
- Typos voor het weerbericht.

## [0.0.4] - 2026-04-21

### Added
- Ontbrekende klasse Vestiging toegevoegd.

### Fixed
- URI voor prov:time.
- Typos in beschrijvingen.

## [0.0.3] - 2026-04-20

### Fixed
- Codelijst URI voor https://data.vlaanderen.be/id/concept/StandaardStatus/OntwerpStandaard.

## [0.0.2] - 2026-04-20

### Fixed
- Stakeholders corrected

## [0.0.1] - 2026-04-20

### Added
- Initial release
